--- a/src/components/SeriesNav.astro
+++ b/src/components/SeriesNav.astro
@@ -42,9 +42,8 @@ const sortedArticles = [...allArticles].sort((a, b) => a.order - b.order);
               <span class="text-sm text-gray-500 ml-2">
                 ({format(article.publishDate, 'MMM d, yyyy')})
               </span>
-            </span>
-          ) : (
-            <a href={`/series/${seriesSlug}/${article.slug}`} class="text-gray-700 hover:text-blue-600">
+            </span>          ) : (
+            <a href={`/devlog/${article.slug}`} class="text-gray-700 hover:text-blue-600">
               {article.title}
               <span class="text-sm text-gray-500 ml-2">
                 ({format(article.publishDate, 'MMM d, yyyy')})
@@ -57,9 +56,8 @@ const sortedArticles = [...allArticles].sort((a, b) => a.order - b.order);
   </div>
 
   <div class="flex justify-between items-center pt-6 border-t border-gray-200">
-    {prevArticle ? (
-      <a 
-        href={`/series/${seriesSlug}/${prevArticle.slug}`} 
+    {prevArticle ? (          <a 
+        href={`/devlog/${prevArticle.slug}`} 
         class="inline-flex items-center px-4 py-2 border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 bg-white hover:bg-gray-50"
       >
         <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-5 w-5 text-gray-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -71,9 +69,8 @@ const sortedArticles = [...allArticles].sort((a, b) => a.order - b.order);
       <div></div>
     )}
     
-    {nextArticle ? (
-      <a 
-        href={`/series/${seriesSlug}/${nextArticle.slug}`} 
+    {nextArticle ? (      <a 
+        href={`/devlog/${nextArticle.slug}`} 
         class="inline-flex items-center px-4 py-2 border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 bg-white hover:bg-gray-50"
       >
         Next: {nextArticle.title}
