--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -49,7 +49,7 @@ const {
     <!-- Code Syntax Highlighting -->
     {includeSyntaxHighlighting && (
       <>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fira-code@6.2.0/distr/fira_code.css" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/firacode/6.2.0/fira_code.css" />
         <script src="/scripts/copyCode.js" is:inline></script>
       </>
     )}
